@@ -4,10 +4,12 @@ Android NDK ChangeLog:
 current version
 
 - Fix build/host-setup.sh to:
-  * execute as a bash script
+  * execute as a Bourne shell script
   * remove unused host gcc dependency
   * improve Windows host auto-detection
-
+  * add GNU Make version check
+  * ensure that the script is run from $NDKROOT as build/host-setup.sh
+  * add --help, --verbose and --no-make-check options
 
 -------------------------------------------------------------------------------
 android-1.5_r1 released.
